@@ -1,3 +1,7 @@
+2010-02-14  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
+
+	* m4/boost.m4: Use boost.m4 from http://github.com/tsuna/boost.m4/raw/master/build-aux/boost.m4.
+
 2009-09-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* m4/boost.m4: Fix for autoconf 2.64 (see also
